--- a/coursera assignment.html
+++ b/coursera assignment.html
@@ -42,8 +42,8 @@
         </details>
     </section>
     <footer>
-        <img src="http://www.intro-webdesign.com/images/newlogo.png" alt="Web Design For Everyone">
-        This page was created by Xuan Hu &amp; Colleen van Lent.
+        <img src="http://www.intro-webdesign.com/images/logo.png" alt="Web Design For Everyone">
+        This page was created by kashish gupta.
         To learn more about web design, visit
         <a href="http://www.intro-webdesign.com/">Intro to Web Design</a>.
     </footer>
